[package]
name = "reddit-export"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.3.0", features = ["derive"] }
regex = "1.8.3"
reqwest = { version = "0.11.18", features = ["cookies", "json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_with = "3.0.0"
tokio = { version = "1.28.1", features = ["macros", "rt", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-panic = "0.1.1"
tracing-subscriber = "0.3.17"
